[metadata]
name = iy
version = 0.0.5
url = https://github.com/t-c-w/iy
platforms = any
description_file = README.md
description = Includes functions to diagnose duplicates in adwords elements
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = iy

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

